Changes in pom.xml to calculate code coverage of test cases